Separate the logic for reflecting timeline changes into a method. In the operation, only return the list of sub-aggregate domains that will change before and after.