@@ -25,6 +25,14 @@ public record Timeline(
         }
     }
 
+    @Builder
+    public record SnapshotTransition(Id id, List<Snapshot> before, List<Snapshot> after) {
+        public SnapshotTransition {
+            before = Optional.ofNullable(before).orElse(new ArrayList<>());
+            after = Optional.ofNullable(after).orElse(new ArrayList<>());
+        }
+    }
+
     public Timeline {
         snapshotList = Optional.ofNullable(snapshotList).orElse(new ArrayList<>());
     }
@@ -37,48 +45,31 @@ public record Timeline(
         return builder().id(id).description(description).build();
     }
 
-    public Timeline copyWithSnapshotList(List<Snapshot> snapshotList) {
-        return toBuilder().snapshotList(snapshotList).build();
-    }
+    public Timeline applyTransition(SnapshotTransition transition) {
+        if (!transition.id().equals(id)) {
+            throw new IllegalStateException("Snapshots managed on other timelines cannot be reflect: The timeline IDs for the transitions are different.");
+        }
+        var exists = snapshotList.stream().collect(Collectors.toMap(Snapshot::id, Function.identity()));
+        if (!transition.before.stream().allMatch(s -> exists.get(s.id()) != null)) {
+            throw new IllegalStateException("Snapshots that do not exist on the timeline cannot be modified: The snapshot in the ‘before’ state is not present in the snapshot list for that timeline.");
+        }
 
-    public Timeline copyWithSnapshotListDiff(List<Snapshot> needUpsert) {
-        var part = needUpsert
-                .stream()
-                .collect(Collectors.partitioningBy(s -> s.id() != null));
-        Map<Snapshot.Id, Snapshot> needUpdate = part.get(true).stream().collect(Collectors.toMap(Snapshot::id, Function.identity()));
-        List<Snapshot> needInsert = part.get(false);
+        var reflect = transition.after.stream().collect(Collectors.partitioningBy(s -> s.id() != null));
+        var needUpdate = reflect.get(true).stream().collect(Collectors.toMap(Snapshot::id, Function.identity()));
+        var needInsert = reflect.get(false);
 
-        var updated = new ArrayList<>(
-                snapshotList
-                        .stream()
-                        .map(s -> Optional.ofNullable(needUpdate.remove(s.id())).orElse(s))
-                        .toList()
-        );
+        List<Snapshot> updated = snapshotList.stream().map(s -> needUpdate.getOrDefault(s.id(), s)).collect(Collectors.toList());
         updated.addAll(needInsert);
 
-        return copyWithSnapshotList(updated);
+        return toBuilder().snapshotList(updated).build();
     }
 
-    private List<Snapshot> getSnapshotValidAtRange(LocalDateTime validFrom, LocalDateTime validTo, Predicate<Snapshot> predicate) {
-        var range = EffectivePeriod.from(validFrom, validTo);
-        return snapshotList
-                .stream()
-                .filter(s -> s.valid().isOverlap(range))
-                .filter(predicate)
-                .toList();
-    }
+    public SnapshotTransition migratePreview(LocalDateTime txAt, LocalDateTime validAt, String description) {
+        var va = EffectiveConvertible.of(validAt);
+        var ta = EffectiveConvertible.of(txAt);
 
-    private List<Snapshot> getSnapshotValidAt(LocalDateTime validAt, Predicate<Snapshot> predicate) {
-        return snapshotList
-                .stream()
-                .filter(s -> s.valid().contains(validAt))
-                .filter(predicate)
-                .toList();
-    }
-
-    public Timeline migrate(LocalDateTime txAt, LocalDateTime validAt, String description) {
         if (snapshotList.isEmpty()) {
-            return copyWithSnapshotList(List.of(Snapshot.create(id, txAt, validAt, description)));
+            return SnapshotTransition.builder().id(id).after(List.of(Snapshot.create(id, ta, va, description))).build();
         }
 
         var sourceList = getSnapshotValidAt(validAt, s -> s.tx().isOpen());
@@ -87,16 +78,23 @@ public record Timeline(
         }
 
         Snapshot source = sourceList.getFirst();
-        EffectivePeriod.validate(source.valid().from(), validAt);
+        Effective.validate(source.valid().from(), validAt);
 
-        var upgradeTransition = source.upgrade(txAt, description);
-        var migrateTransition = upgradeTransition.next().migrate(validAt, description);
+        var closedSource = source.closeTxAt(txAt);
 
-        var needUpsert = Stream.of(upgradeTransition.prev(), migrateTransition.prev(), migrateTransition.next()).toList();
-        return copyWithSnapshotListDiff(needUpsert);
+        var splitPeriod = source.valid().splitAt(validAt);
+        var migratedLeft = Snapshot.create(id, ta, splitPeriod.left(), description);
+        var migratedRight = Snapshot.create(id, ta, splitPeriod.right(), description);
+
+        List<Snapshot> before = List.of(source);
+        List<Snapshot> after = List.of(closedSource, migratedLeft, migratedRight);
+
+        return SnapshotTransition.builder().id(id).before(before).after(after).build();
     }
 
-    public Timeline merge(LocalDateTime txAt, LocalDateTime validFrom, LocalDateTime validTo, String description) {
+    public SnapshotTransition mergePreview(LocalDateTime txAt, LocalDateTime validFrom, LocalDateTime validTo, String description) {
+        var ta = EffectiveConvertible.of(txAt);
+
         if (snapshotList.isEmpty()) {
             throw new IllegalStateException("No snapshot exists in the timeline.");
         }
@@ -107,17 +105,19 @@ public record Timeline(
         }
 
         var closedSource = sourceList.stream()
-                .map(s -> s.copyWithTx(s.tx().copyBeforeAt(txAt)))
+                .map(s -> s.closeTxAt(txAt))
                 .toList();
 
-        var mergedValid = EffectivePeriod.mergeRange(sourceList.stream().map(Snapshot::valid).toList());
-        var mergedSnapshot = Snapshot.create(id, EffectivePeriod.openAt(txAt), mergedValid, description);
+        var mergedValid = Effective.mergeRange(sourceList.stream().map(Snapshot::valid).toList());
+        var mergedSnapshot = Snapshot.create(id, ta, mergedValid, description);
 
-        var needUpsert = Stream.concat(closedSource.stream(), Stream.of(mergedSnapshot)).toList();
-        return copyWithSnapshotListDiff(needUpsert);
+        List<Snapshot> before = sourceList.stream().toList();
+        List<Snapshot> after = Stream.concat(closedSource.stream(), Stream.of(mergedSnapshot)).toList();
+
+        return SnapshotTransition.builder().id(id).before(before).after(after).build();
     }
 
-    public List<Snapshot> rollback(LocalDateTime txAt, LocalDateTime targetTxAt) {
+    public SnapshotTransition rollback(LocalDateTime txAt, LocalDateTime targetTxAt) {
         if (snapshotList.isEmpty()) {
             throw new IllegalStateException("No snapshot exists in the timeline.");
         }
@@ -136,8 +136,28 @@ public record Timeline(
         List<Snapshot> openTx = source.get("open");
 
         var closedSnapshots = openTx.stream().map(s -> s.closeTxAt(txAt)).toList();
-        var rollbackSnapshot = containingTxAt.stream().map(s -> s.copyWithTx(EffectivePeriod.openAt(txAt))).toList();
+        var rollbackSnapshot = containingTxAt.stream().map(s -> s.copyWithTx(Effective.openAt(txAt))).toList();
 
-        return Stream.concat(closedSnapshots.stream(), rollbackSnapshot.stream()).toList();
+        List<Snapshot> before = openTx.stream().toList();
+        List<Snapshot> after = Stream.concat(closedSnapshots.stream(), rollbackSnapshot.stream()).toList();
+
+        return SnapshotTransition.builder().id(id).before(before).after(after).build();
+    }
+
+    private List<Snapshot> getSnapshotValidAtRange(LocalDateTime validFrom, LocalDateTime validTo, Predicate<Snapshot> predicate) {
+        var range = Effective.from(validFrom, validTo);
+        return snapshotList
+                .stream()
+                .filter(s -> s.valid().isOverlap(range))
+                .filter(predicate)
+                .toList();
+    }
+
+    private List<Snapshot> getSnapshotValidAt(LocalDateTime validAt, Predicate<Snapshot> predicate) {
+        return snapshotList
+                .stream()
+                .filter(s -> s.valid().contains(validAt))
+                .filter(predicate)
+                .toList();
     }
 }
